tests/NormalTests/paczka1/fuzzy1/68427587.err
Error in line 6: SuCUcCmH A681 71,3
Error in line 2: Oor3 A969 19,6
Error in line 16: Oor3 S686 5,3
Error in line 19: F79XHyXÌN7 A681 39,1
Error in line 14: SuCUcCmH A969 25,2
Error in line 23: VWckpYiV S686 62,5
Error in line 29: S686 S686 34,2
Error in line 36: UXXMRQ A969 34,1
